FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__Environments_Order__c.object
<CustomObject>
    <fields>
        <fullName>agf__Actual_Delivery_Date__c</fullName>
        <inlineHelpText>When was the environment handed off?</inlineHelpText>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Additional_Comments__c</fullName>
        <inlineHelpText>Is there additional information that is relevant to TechExec?  
This will be displayed in the regular status reports for Environment Delivery.</inlineHelpText>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Additional_Database_Details__c</fullName>
        <inlineHelpText>Additional details related to the database portion of the environment request.</inlineHelpText>
        <label>Additional Database Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Change_Action__c</fullName>
        <inlineHelpText>What type of action are we asking the DBAs to take?</inlineHelpText>
        <label>Change Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>clone</fullName>
                </value>
                <value>
                    <fullName>rename</fullName>
                </value>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>refresh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Change_Request_s__c</fullName>
        <inlineHelpText>Location for the URL to any and all change requests logged against this environment order.
URLs should be entered one per line.</inlineHelpText>
        <label>Change Request(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Committed_Delivery_Date__c</fullName>
        <inlineHelpText>Date upon which the Environments Office agrees to fill the request.</inlineHelpText>
        <label>Committed Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Custom_PLSQL_Users__c</fullName>
        <description>custom plsql users for the environment</description>
        <inlineHelpText>Enter the complete list of PLSQL users needed for this request if we are NOT opting for the standard list of users.  The DBAs will ensure this list of users is created and available for use.</inlineHelpText>
        <label>Custom PLSQL Users</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__DB_Schema_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work request for the DB schema team.</inlineHelpText>
        <label>DB Schema Request</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Environment Orders (DB Schema Request)</relationshipLabel>
        <relationshipName>Environment_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Database_Instance__c</fullName>
        <inlineHelpText>What instance is the database being refreshed as?
Release Engineering may have configuration implications based on the instance.</inlineHelpText>
        <label>Database Instance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Change_Action__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NA1</fullName>
                    <default>true</default>
                    <label>NA1</label>
                </value>
                <value>
                    <fullName>NA0</fullName>
                </value>
                <value>
                    <fullName>NA2</fullName>
                </value>
                <value>
                    <fullName>NA3</fullName>
                </value>
                <value>
                    <fullName>NA4</fullName>
                </value>
                <value>
                    <fullName>NA5</fullName>
                </value>
                <value>
                    <fullName>NA6</fullName>
                </value>
                <value>
                    <fullName>NA7</fullName>
                </value>
                <value>
                    <fullName>EU0</fullName>
                </value>
                <value>
                    <fullName>AP0</fullName>
                </value>
                <value>
                    <fullName>AP1</fullName>
                </value>
                <value>
                    <fullName>CS0</fullName>
                </value>
                <value>
                    <fullName>CS1</fullName>
                </value>
                <value>
                    <fullName>CS2</fullName>
                </value>
                <value>
                    <fullName>CS3</fullName>
                </value>
                <value>
                    <fullName>CS4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Database_Refresh_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the database to be refreshed from a stock image?</description>
        <label>Database Refresh Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Database_Refresh_Source__c</fullName>
        <description>what source image should be used for the refresh?</description>
        <label>Database Refresh Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Database_Refresh_Requested__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>something</fullName>
                </value>
                <value>
                    <fullName>something else</fullName>
                </value>
                <value>
                    <fullName>something else NA5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Delivery_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the sprint of the team that will be performing the final handoff to the customer.</description>
        <inlineHelpText>This is the sprint of the team that will be performing the final handoff to the customer.</inlineHelpText>
        <label>Delivery Sprint</label>
        <referenceTo>agf__ADM_Sprint__c</referenceTo>
        <relationshipLabel>Environment Orders</relationshipLabel>
        <relationshipName>Environment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Environment_Purpose__c</fullName>
        <description>What is the primary use of the environment</description>
        <inlineHelpText>What is the primary use of the environment?</inlineHelpText>
        <label>Environment Purpose</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Functional Testing</fullName>
                </value>
                <value>
                    <fullName>Upgrade Testing</fullName>
                </value>
                <value>
                    <fullName>Workloads</fullName>
                </value>
                <value>
                    <fullName>Stagger Testing</fullName>
                </value>
                <value>
                    <fullName>Capacity expansion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Environment__c</fullName>
        <label>Environment</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Impact__c</fullName>
        <inlineHelpText>Particular measurable impact if this environment does not meet key delivery dates
ex:  delay in release, delay in feature delivery, etc.</inlineHelpText>
        <label>Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Internal_Services_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work request for the Internal Services DBAs.</inlineHelpText>
        <label>Internal Services Request</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Environment Orders (Internal Services Request)</relationshipLabel>
        <relationshipName>Environment_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Network_Case__c</fullName>
        <inlineHelpText>Supportforce case for any network changes needed for this request</inlineHelpText>
        <label>Network Case</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Network_Request__c</fullName>
        <label>Network Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Notification_Email_List__c</fullName>
        <description>email address that should be used to announce environment details</description>
        <inlineHelpText>Please enter the email address that should be used to announce environment details.
This should be provided by the customer.</inlineHelpText>
        <label>Notification Email List</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>agf__Organizational_Priority_Methods__c</fullName>
        <label>Organizational Priority Methods</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Organizational_Priority_Value__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Quality &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Innovate to Scale</fullName>
                </value>
                <value>
                    <fullName>Deliver Chatter</fullName>
                </value>
                <value>
                    <fullName>Accelerate Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Dominate the Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Drive The Platform</fullName>
                </value>
                <value>
                    <fullName>Productivity of our team</fullName>
                </value>
                <value>
                    <fullName>Productivity of our company</fullName>
                </value>
                <value>
                    <fullName>Leadership,Communication, Culture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Organizational_Priority_Value__c</fullName>
        <description>FY11 Technology &amp; Products Organizational Values</description>
        <inlineHelpText>FY11 Technology &amp; Products Organizational Values</inlineHelpText>
        <label>Organizational Priority Values</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the point-of-contact for this request as identified by the customer.</inlineHelpText>
        <label>POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__RelEng_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The RelEng work object supporting this environment order that will be attached to the corresponding
Release Engineering sprint.</inlineHelpText>
        <label>RelEng Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Environment Orders (RelEng Work)</relationshipLabel>
        <relationshipName>Environment_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the Release Engineer delivering this order?</inlineHelpText>
        <label>Release Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environment_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Risk_To_The_Release__c</fullName>
        <inlineHelpText>What is the risk to the release given the chance the environment will be delivered on time?</inlineHelpText>
        <label>Risk To The Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Maintenance_End__c</fullName>
        <inlineHelpText>Expected conclusion of work on the environment during which time it would not be usable by the customer.</inlineHelpText>
        <label>Scheduled Maintenance End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Maintenance_Start__c</fullName>
        <inlineHelpText>Expected start of work on the environment during which time it would not be usable by the customer.</inlineHelpText>
        <label>Scheduled Maintenance Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Schema_Upgrade_Path__c</fullName>
        <inlineHelpText>Select the current schema version of the database as well as the desired version.
This allows DB schema to be aware of exactly what upgrades to execute upon.</inlineHelpText>
        <label>Schema Upgrade Path</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>agf__Schema_Upgrade_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>164</fullName>
                </value>
                <value>
                    <fullName>166</fullName>
                </value>
                <value>
                    <fullName>168</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
                <value>
                    <fullName>172</fullName>
                </value>
                <value>
                    <fullName>174</fullName>
                </value>
                <value>
                    <fullName>176</fullName>
                </value>
                <value>
                    <fullName>178</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Schema_Upgrade_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schema Upgrade Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Source_Database__c</fullName>
        <label>Source Database</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Source_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user story against the Environments Office that provides the requirements of this environment order</inlineHelpText>
        <label>Source Request</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Environment Orders</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Standard_PLSQL_Users__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Do you want Internal Services to prepare the standard plsql users ( 7 dwarves )?
If not, you can specify a custom set</description>
        <inlineHelpText>bashful
dopey
doc
grumpy
happy
sleepy
sneezy</inlineHelpText>
        <label>Standard PLSQL Users?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>More Information Needed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Waiting on Requestor</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Waiting on Requirements</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Supporting_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What release will this environment be supporting?</inlineHelpText>
        <label>Supporting Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Environment Orders</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__System_Case__c</fullName>
        <inlineHelpText>Supportforce case for any system/hardware changes required for this environment request</inlineHelpText>
        <label>System Case</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__System_Request__c</fullName>
        <label>System Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Target_Database__c</fullName>
        <label>Target Database</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Environment Order</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Environment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ENV-{0000}</displayFormat>
        <label>Environment Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environment Orders</pluralLabel>
    <recordTypes>
        <fullName>agf__Environment_Request</fullName>
        <active>true</active>
        <description>The request is logged by the customer to the Environments Office.  From the request, the order can be generated.</description>
        <label>Environment Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>